<?xml version="1.0"?>
<package format="3">
  <name>all_wheel_cartographer</name>
  <version>0.0.0</version>
  <description>Cartographer SLAM bringup for the all-wheel chassis.</description>
  <maintainer email="shexingju@todo.todo">shexingju</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>cartographer_ros</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
