<?xml version="1.0"?>
<package format="3">
  <name>all_wheel_description</name>
  <version>0.0.0</version>
  <description>URDF and meshes for the all-wheel chassis</description>
  <maintainer email="shexingju@todo.todo">shexingju</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
